--- a/about.html
+++ b/about.html
@@ -88,43 +88,33 @@
                         <span class="tech-tag">ARIA</span>
                         <span class="tech-tag">响应式</span>
                         <span class="tech-tag">无障碍</span>
-	v<!-- 在 about-shortcuts 部分之前添加作者联系信息 -->
-<div class="about-author">
-    <h3>👤 作者信息</h3>
-    <div class="author-info">
-        <p>网站设计与开发</p>
-        <div class="contact-links">
-            <a href="https://github.com/tang-jiajun" 
-               target="_blank" 
-               rel="noopener noreferrer" 
-               class="contact-link">
-                <span class="contact-icon">🐙</span> GitHub
-            </a>
-            <a href="https://jiajuntang.dpdns.org" 
-               target="_blank" 
-               rel="noopener noreferrer" 
-               class="contact-link">
-                <span class="contact-icon">🏠</span> 个人主页
-            </a>
-            <a href="mailto:tang-jiajun@outlook.com" 
-               class="contact-link">
-                <span class="contact-icon">✉️</span> 邮箱
-            </a>
-        </div>
-        <p class="contact-email">📧 tang-jiajun@outlook.com</p>
-    </div>
-</div>
                     </div>
                 </div>
                 
-                <div class="about-shortcuts">
-                    <h3>⌨️ 键盘快捷键</h3>
-                    <ul class="shortcut-list">
-                        <li><kbd>Ctrl</kbd> + <kbd>/</kbd>：聚焦搜索框</li>
-                        <li><kbd>Ctrl</kbd> + <kbd>T</kbd>：切换主题</li>
-                        <li><kbd>Tab</kbd>：导航焦点</li>
-                        <li><kbd>Enter</kbd>：激活项目</li>
-                    </ul>
+                <div class="about-author">
+                    <h3>👤 作者信息</h3>
+                    <div class="author-info">
+                        <p>网站设计与开发</p>
+                        <div class="contact-links">
+                            <a href="https://github.com/tang-jiajun" 
+                               target="_blank" 
+                               rel="noopener noreferrer" 
+                               class="contact-link">
+                                <span class="contact-icon">🐙</span> GitHub
+                            </a>
+                            <a href="https://jiajuntang.dpdns.org" 
+                               target="_blank" 
+                               rel="noopener noreferrer" 
+                               class="contact-link">
+                                <span class="contact-icon">🏠</span> 个人主页
+                            </a>
+                            <a href="mailto:tang-jiajun@outlook.com" 
+                               class="contact-link">
+                                <span class="contact-icon">✉️</span> 邮箱
+                            </a>
+                        </div>
+                        <p class="contact-email">📧 tang-jiajun@outlook.com</p>
+                    </div>
                 </div>
                 
                 <div class="back-home">
@@ -137,6 +127,7 @@
     <footer class="footer">
         <div class="container">
             <p>© 2024 网站导航 | <a href="about.html">关于本站</a></p>
+            <p class="footer-info">作者：唐家君 | GitHub: <a href="https://github.com/tang-jiajun" target="_blank" rel="noopener noreferrer">tang-jiajun</a></p>
         </div>
     </footer>
 
