--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <h3 class="category-title">🎬 视频娱乐</h3>
                 <div class="websites-grid">
                     <div class="card">
-                        <a href="https://www.bilibili.com/?spm_id_from=333.1007.0.0" 
+                        <a href="https://www.bilibili.com/" 
                            target="_blank" 
                            rel="noopener noreferrer"
                            class="website-link">
@@ -143,11 +143,11 @@
                         </a>
                     </div>
                     <div class="card">
-                        <a href="https://www.douyin.com/jingxuan" 
+                        <a href="https://www.douyin.com/" 
                            target="_blank" 
                            rel="noopener noreferrer"
                            class="website-link">
-                            <h4 class="website-name">抖音精选</h4>
+                            <h4 class="website-name">抖音</h4>
                             <p class="website-desc">优质短视频内容</p>
                             <span class="website-url">douyin.com</span>
                         </a>
@@ -170,7 +170,7 @@
                         </a>
                     </div>
                     <div class="card">
-                        <a href="https://github.com/dashboard" 
+                        <a href="https://github.com/" 
                            target="_blank" 
                            rel="noopener noreferrer"
                            class="website-link">
@@ -197,7 +197,7 @@
                 <h3 class="category-title">☁️ 云服务</h3>
                 <div class="websites-grid">
                     <div class="card">
-                        <a href="https://www.microsoft.com/zh-cn" 
+                        <a href="https://www.microsoft.com/" 
                            target="_blank" 
                            rel="noopener noreferrer"
                            class="website-link">
@@ -207,7 +207,7 @@
                         </a>
                     </div>
                     <div class="card">
-                        <a href="https://www.cloudflare-cn.com/enterprise/" 
+                        <a href="https://www.cloudflare-cn.com/" 
                            target="_blank" 
                            rel="noopener noreferrer"
                            class="website-link">
@@ -234,7 +234,7 @@
                 <h3 class="category-title">🤖 AI与工具</h3>
                 <div class="websites-grid">
                     <div class="card">
-                        <a href="https://www.qianwen.com/chat/3b242dca586243b1bbe40b3ec0558301" 
+                        <a href="https://www.qianwen.com/" 
                            target="_blank" 
                            rel="noopener noreferrer"
                            class="website-link">
@@ -288,7 +288,7 @@
                 <h3 class="category-title">🛒 电商购物</h3>
                 <div class="websites-grid">
                     <div class="card">
-                        <a href="https://re.m.jd.com/page/homelike?ad_od=3&re_dcp=21Sm2D2ZOw&traffic_source=1004&bd_vid=&cu=true&utm_source=haosou-search&utm_medium=cpc&utm_campaign=t_262767352_haosousearch&utm_term=72415908353_0_ed7be7fbf71b4c79ad78dda89f98646e" 
+                        <a href="https://www.jd.com/" 
                            target="_blank" 
                            rel="noopener noreferrer"
                            class="website-link">
@@ -298,7 +298,7 @@
                         </a>
                     </div>
                     <div class="card">
-                        <a href="https://www.tmall.com/?page_offline=true" 
+                        <a href="https://www.tmall.com/" 
                            target="_blank" 
                            rel="noopener noreferrer"
                            class="website-link">
@@ -308,11 +308,11 @@
                         </a>
                     </div>
                     <div class="card">
-                        <a href="https://mms.pinduoduo.com/login/sso?platform=wholesale&redirectUrl=https%3A%2F%2Fpifa.pinduoduo.com%2Fclint%2Fapi%2Flogin%3Fredirect%3Dhttps%253A%252F%252Fpifa.pinduoduo.com%252F" 
+                        <a href="https://www.pinduoduo.com/" 
                            target="_blank" 
                            rel="noopener noreferrer"
                            class="website-link">
-                            <h4 class="website-name">拼多多商家</h4>
+                            <h4 class="website-name">拼多多</h4>
                             <p class="website-desc">店铺管理后台</p>
                             <span class="website-url">pinduoduo.com</span>
                         </a>
