--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
                                class="contact-link">
                                 <span class="contact-icon">🐙</span> GitHub
                             </a>
-                            <a href="https://jiajuntang.dpdns.org" 
+                            <a href="https://tjj.qzz.io" 
                                target="_blank" 
                                rel="noopener noreferrer" 
                                class="contact-link">
