--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
                     <div class="author-info">
                         <p>网站设计与开发</p>
                         <div class="contact-links">
-                            <a href="https://github.com/tang-jiajun" 
+                            <a href="https://github.com/dancetangit" 
                                target="_blank" 
                                rel="noopener noreferrer" 
                                class="contact-link">
@@ -133,4 +133,5 @@
 
     <script src="src/main.js"></script>
 </body>
+
 </html>
