--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                            rel="noopener noreferrer"
                            class="website-link">
                             <h4 class="website-name">拼多多</h4>
-                            <p class="website-desc">店铺管理后台</p>
+                            <p class="website-desc">新电商开拓者</p>
                             <span class="website-url">pinduoduo.com</span>
                         </a>
                     </div>
@@ -331,4 +331,5 @@
 
     <script src="src/main.js"></script>
 </body>
+
 </html>
